Adding drupal.org package facade

--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,11 @@
             "email": "steve.persch@pantheon.io"
         }
     ],
-    "require": {}
+    "require": {},
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://packages.drupal.org/8"
+        }
+    ],
 }
