--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,14 @@
             "email": "steve.persch@pantheon.io"
         }
     ],
-    "require": {},
+    "require": {
+        "drupal/field_group": "^1.0@RC"
+    },
     "repositories": [
         {
             "type": "composer",
             "url": "https://packages.drupal.org/8"
         }
-    ]
+    ],
+    "minimum-stability": "alpha"
 }
